--- a/RLA/lista_exercício2.1
+++ b/RLA/lista_exercício2.1
@@ -4,23 +4,10 @@
 
 ```mermaid
 flowchart TD
-A([início])-->B[\X1, X2, X3, X4\]
+A([início])-->B[\X1, X2, X3, X4, M\]
 B-->C{{"digite quatro números"}}
 C-->D[soma=X1+X2+X3+X4]
 D-->E[M=soma//4]
 E-->F{{"M=média"}}
 F-->Z([fim])
-```
-
-```
-## pseudodrama
-ALGORITMO CALCULAR MÉDIA
-DECLARE X1, X2 , X3, X4, M NÚMERICO
-INÍCIO
-ESCREVA"DIGITE QUATRO NOTAS DE AVLIAÇÕES "
-LEIA X1, X2, X3, X4
-SOMA<--X1+X2+X3+X4
-M<--SOMA/4
-ESCREVA"MÉDIA="M
-FIM_ALGORITMO
 ```
