--- a/RLA/lista_exercício2.1
+++ b/RLA/lista_exercício2.1
@@ -1,1 +1,14 @@
+# unifor
+## fluxugrama
+### TRABALHO2.EXERCÍCIO1 
+
+```mermaid
+flowchart TD
+A([início])-->B[\ X1, X2, X3, X4\]
+B-->C{{"digite quatro números"}}
+C-->D[soma=X1+X2+X3+X4]
+D-->E[M=soma//4]
+E-->F{{"M=média"}}
+F-->Z([fim])
+```
 
