--- a/RLA/lista_exercício2.2
+++ b/RLA/lista_exercício2.2
@@ -1,13 +1,12 @@
-# Unifor
-## Fluxograma
+# unifor
+## fluxograma
 ### exercício2.2
 
 ```mermaid
 flowchart TD
 A([início ])-->B{{digite a temperatura em celsius}}
-B-->C[/x/]
+B-->C[/C/]
 C-->D[F = 9/5 * C + 32]
 D-->E{{"Temperatura em Fahrenheit é de F"}}
 E-->Z([Fim])
-
 ```
